--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "About"
     url: /about/
+  - title: "Setups"
+    url: /setups/
   - title: "Publications"
     url: /publications/
   - title: "Blog"
