Testing home page changes

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "mesospim.org"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "Open-source light-sheet microscopes for imaging in cleared tissue."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ffvoigt.github.io/minimal-mistakes-playground" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
