--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@ main:
     url: /faq/
   - title: "Publications"
     url: /publications/
+  - title: "Meetings"
+    url: /meetings_and_workshops/
   - title: "Blog"
     url: /year-archive/
   # - title: "Sample Collections"
