Added email to the about page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,5 +5,6 @@ Fabian Voigt:
   uri         : "https://www.hifo.uzh.ch/en/research/helmchen.html"
   bio         : "PhD student in the Helmchen lab. Microscope complexifier."
   avatar      : "/assets/images/authors/voigt.jpg"
+  email       : "voigt@hifo.uzh.ch"
   twitter     : "mesoSPIM"
   github      : "ffvoigt"
