--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "mesospim.org"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "The mesoSPIM initiative"
 description              : "Open-source light-sheet microscopes for imaging in cleared tissue."
 url                      : "https://ffvoigt.github.io/minimal-mistakes-playground" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
